--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,8 @@ services:
     restart: always
     ports:
       - 5000:5000
+    environment:
+      MONGODB_URL: "mongodb://mongo:27017/"
     depends_on:
       mongo:
         condition: service_started
