--- a/compose.yaml
+++ b/compose.yaml
@@ -24,6 +24,8 @@ services:
     build: .
     ports:
       - 80:80
+    environment:
+      BACKEND_URL: "http://backend:5000"
     depends_on:
       mongo:
         condition: service_started
