--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     ports:
       - 5000:5000
     environment:
-      MONGODB_URL: "mongodb://mongo:27017/"
+      - MONGODB_URL=mongodb://mongo:27017/
     depends_on:
       mongo:
         condition: service_started
@@ -25,7 +25,7 @@ services:
     ports:
       - 80:80
     environment:
-      BACKEND_URL: "http://backend:5000"
+      - BACKEND_URL=http://backend:5000
     depends_on:
       mongo:
         condition: service_started
