--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ services:
       mongo:
         condition: service_started
 
-  lobenonstairs:
+  frontend:
     build: .
     ports:
       - 80:80
